# CV-agent

./: .env.example  .gitignore  AI_CONCEPTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  main.py  pyproject.toml
.claude/: settings.local.json
agents/: ats_scorer.py  cv_enhancer.py  cv_parser.py  gap_analyzer.py  jd_analyzer.py
graph/: graph.py  state.py
tests/: test_ats_scorer.py  test_cv_enhancer.py  test_cv_parser.py  test_gap_analyzer.py  test_jd_analyzer.py
tools/: config.py  llm_utils.py  pdf_loader.py
